# ben_description

./: .gitignore  CMakeLists.txt  package.xml
launch/: display.launch  gazebo.launch  load.launch  publish_state.launch  sandisland.launch
models/: model.config
models/meshes/: BEN_convex_hull.dae  SimpleBEN.dae  forward_camera.dae  garmin_gps.dae  panoramic_camera_housing.dae
rviz/: urdf.rviz
urdf/: ben.urdf  ben.xacro  ben_dynamics_plugin.xacro  ben_gazebo_thruster_config.xacro  ben_mesh.xacro  ben_thruster.xacro  jetdrive.xacro
urdf/sensors/: ben_3d_lidar.xacro  ben_camera.xacro  ben_factory_gps.xacro  ben_factory_heading_sensor.xacro  ben_gps.xacro  ben_imu.xacro  ben_pano_array.xacro  ben_pano_camera.xacro  ben_posmv.xacro  ben_posmv_mru.xacro  forward_camera.xacro  lidar.xacro  mbes.xacro  oem_gps.xacro  oem_heading_sensor.xacro  pano_array.xacro  pano_camera.xacro  radar.xacro
